[package]
name = "femtoclaw-sdk"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw Client SDK — programmatic API bindings for external integration"
repository = "https://github.com/femtoclaw/femtoclaw-sdk.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
